znav-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: znav-ingress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: znav.bar.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: znav-frontend
            port:
              number: 80
